added my ranger tmux config

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -23,9 +23,10 @@ bind z split-window -h
 bind v split-window -v
 
 bind-key -n C-x resize-pane -L 5
-
+set status-bg default
 bind-key -n C-w resize-pane -R 5
-
+set-option -g status-bg default
+set-option -g status-fg colour240
 bind-key -n C-y resize-pane -D 5
 bind-key -n C-z resize-pane -U 5
 
