--- a/.config/alacritty/rice-colors.toml
+++ b/.config/alacritty/rice-colors.toml
@@ -1,33 +1,33 @@
-# Color scheme for Pamela Rice
+# (Gruvbox) Color scheme for Silvia Rice
 
 # Default colors
 [colors.primary]
-background = "#1D1F28"
-foreground = "#FDFDFD"
+background = "#282828"
+foreground = "#fbf1c7"
 
 # Cursor colors
 [colors.cursor]
-cursor = "#FF4971"
-text = "#1D1F28"
+cursor = "#fbf1c7"
+text = "#282828"
 
 # Normal colors
 [colors.normal]
-black = "#3D4C5F"
-blue = "#8897F4"
-cyan = "#79E6F3"
-green = "#5ADECD"
-magenta = "#C574DD"
-red = "#F37F97"
-white = "#FDFDFD"
-yellow = "#F2A272"
+black = "#a89984"
+blue = "#458588"
+cyan = "#689d6a"
+green = "#98971a"
+magenta = "#b16286"
+red = "#cc241d"
+white = "#ebdbb2"
+yellow = "#d79921"
 
 # Bright colors
 [colors.bright]
-black = "#56687E"
-blue = "#556FFF"
-cyan = "#3FDCEE"
-green = "#18E3C8"
-magenta = "#B043D1"
-red = "#FF4971"
-white = "#BEBEC1"
-yellow = "#FF8037"
+black = "#a89984"
+blue = "#83a598"
+cyan = "#8ec07c"
+green = "#b8bb26"
+magenta = "#d3869b"
+red = "#fb4934"
+white = "#ebdbb2"
+yellow = "#fabd2f"
