--- a/.config/alacritty/rice-colors.toml
+++ b/.config/alacritty/rice-colors.toml
@@ -1,33 +1,33 @@
-# (Gruvbox) Color scheme for Silvia Rice
+# (Onedark) Color scheme for Isabel Rice
 
 # Default colors
 [colors.primary]
-background = "#282828"
-foreground = "#fbf1c7"
+background = "#14171c"
+foreground = "#abb2bf"
 
 # Cursor colors
 [colors.cursor]
-cursor = "#fbf1c7"
-text = "#282828"
+cursor = "#abb2bf"
+text = "#14171c"
 
 # Normal colors
 [colors.normal]
-black = "#a89984"
-blue = "#458588"
-cyan = "#689d6a"
-green = "#98971a"
-magenta = "#b16286"
-red = "#cc241d"
-white = "#ebdbb2"
-yellow = "#d79921"
+black = "#1e2127"
+blue = "#4889be"
+cyan = "#49919a"
+green = "#81ae5f"
+magenta = "#7560d3"
+red = "#be5046"
+white = "#abb2bf"
+yellow = "#d19a66"
 
 # Bright colors
 [colors.bright]
-black = "#a89984"
-blue = "#83a598"
-cyan = "#8ec07c"
-green = "#b8bb26"
-magenta = "#d3869b"
-red = "#fb4934"
-white = "#ebdbb2"
-yellow = "#fabd2f"
+black = "#5c6370"
+blue = "#61afef"
+cyan = "#56b6c2"
+green = "#98c379"
+magenta = "#8677cf"
+red = "#e06c75"
+white = "#ffffff"
+yellow = "#e5c07b"
