--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Catppuccin-Mocha
-gtk-icon-theme-name=Tela-circle-dracula
+gtk-theme-name=amarena
+gtk-icon-theme-name=Nordzy-pink-dark
 gtk-font-name=Noto Sans 9
 gtk-cursor-theme-name=phinger-cursors
 gtk-cursor-theme-size=20
