--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ monitor=DP-2,2560x1440@240,1920x0,1
 $scrPath = ~/.config/hyprdots/scripts
 exec-once = $scrPath/resetxdgportal.sh # reset XDPH for screenshare
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
+exec-once = emacs --daemon # switch to the dark side :D
 exec-once = dbus-update-activation-environment --systemd --all # for XDPH
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # for XDPH
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication dialogue for GUI apps
