--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -431,7 +431,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="PRESENT DAY, PRESENT TIME!"
 
 # Disk percent.
 # Show/Hide disk percent.
@@ -728,7 +728,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="/home/florin/.config/neofetch/lain.png"
 
 
 # Ascii Options
