updated the doom with an ai asister

--- a/.config/hypr/windowrules.conf
+++ b/.config/hypr/windowrules.conf
@@ -27,6 +27,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt5ct)$
 windowrulev2 = opacity 0.80 0.80,class:^(qt6ct)$
 windowrulev2 = opacity 0.80 0.80,class:^(kvantummanager)$
+windowrulev2 = opacity 0.80 0.80,class:^(showmethekey-gtk)$ #showmethekey-Gtk
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ #Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ #Flatseal-Gtk
@@ -73,4 +74,6 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = tile,class:^(dev.warp.Warp)$
+windowrulev2 = float,class:^(showmethekey-gtk)$ #showmethekey-Gtk
 
