--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -28,8 +28,9 @@ bind = $mainMod, backspace, exec, $scrPath/logoutlaunch.sh 1 # logout menu
 bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # toggle waybar
 
 # Application shortcuts
-bind = $mainMod, T, exec, $term  # open terminal
-bind = $mainMod, E, exec, $file # open file manager
+bind = $mainMod, Return, exec, $term  # open terminal
+bind = $mainMod, E, exec, emacsclient -c -a "emacs" # open emacs
+bind = $mainMod ALT, E, exec, $file # open file manager
 bind = $mainMod, C, exec, $editor # open vscode
 bind = $mainMod, B, exec, $browser # open browser
 bind = $CONTROL SHIFT, ESCAPE, exec, $scrPath/sysmonlaunch.sh  # open htop/btop if installed or default to top (system monitor)
