added a rofi wifi menu to bspwm

--- a/.config/bspwm/picom.conf
+++ b/.config/bspwm/picom.conf
@@ -41,7 +41,7 @@ shadow-exclude = [
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 fade-delta = 5;
-blur-background = false
+blur-background = true
 blur-method = "none"
 blur-strength = 6.0;
 transition-length = 300;
@@ -106,9 +106,9 @@ opacity-rule = [
   "75:class_g = 'obsidian' && !focused",
   "90:class_g = 'Emacs' && focused",
   "75:class_g = 'Emacs' && !focused",
-  "99:class_g = 'FloaTerm'",
-  "99:class_g = 'FloaTerm'",
-  "100:class_g = 'Updating'",
+  "100:class_g = 'FloaTerm'",
+  "100:class_g = 'FloaTerm'",
+  "90:class_g = 'Updating'",
   "90:class_g = 'scratch'"
 ];
 
