--- a/.config/hypr/themes/Decay-Green.conf
+++ b/.config/hypr/themes/Decay-Green.conf
@@ -1,7 +1,7 @@
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-green'
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
-exec = /home/florin/scripts/vim-theme.sh catppuccin
+exec = /home/florin/scripts/vim-theme.sh decay
 
 general {
     gaps_in = 3
