--- a/.config/hypr/themes/Frosted-Glass.conf
+++ b/.config/hypr/themes/Frosted-Glass.conf
@@ -8,7 +8,7 @@
 exec = gsettings set org.gnome.desktop.interface icon-theme 'Tela-circle-blue'
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Frosted-Glass'
 exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-light'
-exec= /home/florin/scripts/vim-theme.sh terafox
+exec= /home/florin/scripts/vim-theme.sh catppuccin-latte
 
 general {
     gaps_in = 4
