--- a/.config/alacritty/rice-colors.toml
+++ b/.config/alacritty/rice-colors.toml
@@ -1,33 +1,33 @@
-# (Kanagawa Dragon) Color scheme for Cynthia Rice
+# (Rose-Pine Moon) Color scheme for Cristina Rice
 
 # Default colors
 [colors.primary]
-background = '#181616'
-foreground = '#c5c9c5'
+background = "#232136"
+foreground = "#e0def4"
 
 # Cursor colors
 [colors.cursor]
-cursor = "#8a9a7b"
-text = "#181616"
+cursor = "#c3a5e6"
+text = "#232136"
 
 # Normal colors
 [colors.normal]
-black = '#0d0c0c'
-blue = '#8ba4b0'
-cyan = '#8ea4a2'
-green = '#8a9a7b'
-magenta = '#a292a3'
-red = '#c4746e'
-white = '#C8C093'
-yellow = '#c4b28a'
+black = "#393552"
+blue = "#34738e"
+cyan = "#eabbb9"
+green = "#9bced7"
+magenta = "#c3a5e6"
+red = "#ea6f91"
+white = "#faebd7"
+yellow = "#f1ca93"
 
 # Bright colors
 [colors.bright]
-black = '#a6a69c'
-blue = '#7FB4CA'
-cyan = '#7AA89F'
-green = '#87a987'
-magenta = '#938AA9'
-red = '#E46876'
-white = '#c5c9c5'
-yellow = '#E6C384'
+black = "#6e6a86"
+blue = "#34738e"
+cyan = "#ebbcba"
+green = "#9bced7"
+magenta = "#c3a5e6"
+red = "#ea6f91"
+white = "#e0def4"
+yellow = "#f1ca93"
