--- a/.config/bspwm/picom.conf
+++ b/.config/bspwm/picom.conf
@@ -41,7 +41,7 @@ shadow-exclude = [
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 fade-delta = 5;
-blur-background = true
+blur-background = false
 blur-method = "none"
 blur-strength = 6.0;
 transition-length = 300;
@@ -108,7 +108,7 @@ opacity-rule = [
   "75:class_g = 'Emacs' && !focused",
   "100:class_g = 'FloaTerm'",
   "100:class_g = 'FloaTerm'",
-  "90:class_g = 'Updating'",
+  "100:class_g = 'Updating'",
   "90:class_g = 'scratch'"
 ];
 
