--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -132,7 +132,8 @@ general {
 }
 master {
    new_is_master = false
-   orientation = right
+   orientation = left
+   mfact = 0.60
 }
 dwindle {
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
