--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
 set-option -g mouse on
-set-option -g default-command "exec zsh -l"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -10,9 +9,9 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @catppuccin_flavour 'mocha'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'omerxx/tmux-sessionx'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
@@ -60,6 +59,6 @@ set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -gq allow-passthrough on
 
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+set -g @catppuccin_date_time_text "%Y-%m-%d"
 run '~/.tmux/plugins/tpm/tpm'
 set -g default-command "${SHELL}"
