--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -25,12 +25,14 @@ bind = ALT, return, fullscreen, # toggle the window on focus to fullscreen
 bind = $mainMod, O, exec, swaylock # lock screen
 bind = $mainMod SHIFT, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, backspace, exec, $scrPath/logoutlaunch.sh 1 # logout menu
+bind = $mainMod SHIFT ALT, P, exec, shutdown now # shutdown 
+bind = $mainMod SHIFT ALT, R, exec, reboot now
 bind = $CONTROL, ESCAPE, exec, killall waybar || waybar # toggle waybar
 
 # Application shortcuts
 bind = $mainMod, Return, exec, $term  # open terminal
 bind = $mainMod , T, exec, kitty tmux # open terminal in tmux
-bind = $mainMod ALT, O, exec, flatpak run com.obsproject.Studio
+bind = $mainMod SHIFT, O, exec, flatpak run com.obsproject.Studio
 bind = $mainMod, E, exec, emacsclient -c -a "emacs" # open emacs
 bind = $mainMod ALT, E, exec, $file # open file manager
 bind = $mainMod, C, exec, $editor # open vscode
@@ -101,11 +103,11 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Switch workspaces relative to the active workspace with mainMod + CTRL + [←→]
-bind = $mainMod CTRL, right, workspace, r+1 
-bind = $mainMod CTRL, left, workspace, r-1
+bind = $mainMod CTRL, L, workspace, r+1 
+bind = $mainMod CTRL, H, workspace, r-1
 
 # move to the first empty workspace instantly with mainMod + CTRL + [↓]
-bind = $mainMod CTRL, down, workspace, empty 
+bind = $mainMod CTRL, J, workspace, empty 
 
 # Resize windows
 binde = $mainMod SHIFT, L, resizeactive, 30 0
